--- a/_posts/2025/2025-01-31-review.md
+++ b/_posts/2025/2025-01-31-review.md
@@ -38,7 +38,7 @@ image:
 
 2024年秋季学期，选修了理论物理专业课和公共课**9门，共计22学分，440学时**。中国科学院的课时安排不同于高校，可能是想让研究生尽快完成学业然后上手科研，一次课总共3个学时，**计3*50+20=170分钟**。尤其是在周一，上午有《群论》，下午有《广义相对论》，晚上还有《粒子物理基础》，一天有近9个小时都在上课。对于一个凝聚态出身、在本科毕业前没有任何高能基础的人来说，学业和peer压力不可谓不大。好在最后基本上都坚持下来了，收获很大，也明确了自己真正想做的大方向。用我之前在QQ动态上的话来说便是“**搞懂了很多内行人认为是极其trivial的常识问题**”。
 
-![2024秋选课单](/assets/img/in-post/2025/2024/summary。png)
+![2024秋选课单](/assets/img/in-post/2025/2024/summary.png)
 
 
 - 9月9日举办了2024级研究生开学典礼。本来是要作为学院新生代表，上台参加佩戴校徽的环节。略显遗憾的是后面临时换人，错失了与王建宇院士合影的机会。22日，去浙江省博物馆看了黄公望《富春山居图》(剩山卷)真迹。排队将近1个多小时，观看却只有大概不到1分钟的时间。
@@ -117,7 +117,7 @@ image:
     - 做事一点都不能拖拉，今日事今日毕，不要总想着明日、后日……再做。
     - 尽快要将场论补起来，将基础打好。
 
--  12。31，广义相对论考试。考试很简单。
+-  12。31，广义相对论考试。考试极其简单，大概半小时就能答完。
 
 
 
@@ -136,7 +136,7 @@ image:
 - **HIAS Theory Scholar**:学院层面举办的以博士后为主的学术交流会议。
 
 因为时间关系，这学期大概只听了9场(有效的)科学前沿讲座。
-![讲座](/assets/img/in-post/2025/2024/jz。png)
+![讲座](/assets/img/in-post/2025/2024/jz.png)
 
 ### 美食
 
@@ -155,49 +155,49 @@ image:
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/in-post/2025/1.jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/1.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。3。13，于南京浦口区</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2.jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/2.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。3。28，于杭州西湖风景区</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/3.jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/3.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。6。14，于南京浦口区白马生活广场</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/5.jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/5.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂一楼小碗菜</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/xiaochao.jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/xiaochao.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>食堂二楼小炒</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/4.jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/4.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。10。3，于南京高淳宝龙广场</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/1211.jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/6.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2024。12。11，于杭州转塘街道霞鸣街</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/8.jpg" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/8.jpg" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
         <p>2025。1。4，于杭州转塘金街美地</p>
       </div>
