--- a/_posts/2025/2025-01-31-review.md
+++ b/_posts/2025/2025-01-31-review.md
@@ -8,7 +8,7 @@ pin: false
 #media_subpath : /assets/img/in-post/2024/2024-08-16-weicheng/
 description: The year-end summary for 2024， covering aspects such as academics， life， and more。
 image: 
-    path: /assets/img/in-post/2025/2024/coverr.jpg
+    path: /assets/img/in-post/2025/2024/13.jpg
 ---
 
 > 2024年于我而言是意义尤为重大的一年。在更高的平台上，认识了很多新的朋友，也取得了很多的进步。
@@ -87,7 +87,7 @@ image:
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/in-post/2025/2024/16。png" class="d-block w-100 carousel-image" alt="。。。">
+      <img src="/assets/img/in-post/2025/2024/16.png" class="d-block w-100 carousel-image" alt="。。。">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
